@@ -1,3 +1,6 @@
+20030606
+ - (dtucker) [uidswap.c] Fix setreuid and add missing args to fatal(). ok djm@
+
 20030605
  - (djm) Support AI_NUMERICHOST in fake-getaddrinfo.c. Needed for recent
    canohost.c changes.
@@ -473,4 +476,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.2789 2003/06/05 12:20:11 dtucker Exp $
+$Id: ChangeLog,v 1.2790 2003/06/06 00:46:04 dtucker Exp $
